# NL2SQL

./: .gitignore  README.md
backend/: .env.example  README.md  dev.py  pyproject.toml  requirements.txt
backend/app/: config.py  config_generation.py  config_loader.py  dependencies.py  main.py  schema_watcher.py
backend/app/agent/: __init__.py  graph.py  nodes.py  state.py  strategy.py  tools.py  value_validation.py
backend/app/core/: cache.py  middleware.py
backend/app/database/: engine.py  executor.py  session.py
backend/app/models/: base.py
backend/app/prompts/: __init__.py  correction_prompt.txt  few_shot_examples.json  nl2sql_prompt.txt
backend/app/rag/: __init__.py  business_semantics.py  candidate_sql_plan_builder.py  candidate_table_builder.py  confidence_judge.py  few_shot_manager.py  join_path_planner.py  llm_plan_reranker.py  query_normalizer.py  retriever.py  schema_enrichment.py  schema_governance.py  schema_introspection.py  schema_linker.py  schema_models.py  schema_sync.py  semantic_brief.py  semantic_query.py  sql_generator.py  sql_planner.py  sql_repairer.py  value_linker.py  value_mapping_loader.py  value_mappings.json
backend/app/routers/: query.py
backend/app/schemas/: query.py  sql.py  user.py
backend/app/services/: agent_service.py  llm_service.py  rag_service.py  result_processor.py
backend/app/utils/: exceptions.py  (+1 more)
backend/config/: business_terms.yaml  enum_mappings.yaml  few_shot_samples.yaml  field_examples.yaml  field_semantics.yaml  table_relations.yaml
backend/schema_sync/: sync_job.py
backend/tests/: conftest.py
(+172 files in other folders)
